force-app/main/default/objects/Licencia__c/Licencia__c.object-meta.xml
<CustomObject>
    <label>Licencia</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Nombre de Licencia</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licencias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>