force-app/main/default/objects/Licencia__c/fields/Cantidad_de_dias_de_la_licencia__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_dias_de_la_licencia__c</fullName>
    <label>Cantidad de dias de la licencia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>