force-app/main/default/objects/Licencia__c/fields/Cantidad_de_visitas_que_no_se_realizar_n__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_visitas_que_no_se_realizar_n__c</fullName>
    <formula>IF( Fecha_de_inicio__c  =  Fecha_de_fin__c ,   Dia_decimal__c   *  Ciclo__r.Target_diario__c , (  Fecha_de_fin__c  -  Fecha_de_inicio__c + 1 )* Ciclo__r.Target_diario__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cantidad de visitas que no se realizarán</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>