force-app/main/default/objects/Licencia__c/fields/Ciclo__c.field-meta.xml
<CustomField>
    <fullName>Ciclo__c</fullName>
    <label>Ciclo</label>
    <referenceTo>Ciclo__c</referenceTo>
    <relationshipLabel>Licencias</relationshipLabel>
    <relationshipName>Licencias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>