force-app/main/default/objects/Licencia__c/fields/Dia_decimal__c.field-meta.xml
<CustomField>
    <fullName>Dia_decimal__c</fullName>
    <formula>IF( Fecha_de_inicio__c &lt;&gt; Fecha_de_fin__c , Cantidad_de_dias_de_la_licencia__c,
IF( ISPICKVAL( Duracion_de_licencia__c , &quot;1 día&quot;) , 1,
IF( ISPICKVAL( Duracion_de_licencia__c , &quot;1/2 día&quot;) , 0.5,
IF( ISPICKVAL( Duracion_de_licencia__c , &quot;1/4 día&quot;) , 0.25,
IF( ISPICKVAL( Duracion_de_licencia__c , &quot;1/5 día&quot;) , 0.20,
IF( ISPICKVAL( Duracion_de_licencia__c , &quot;3/4 día&quot;) , 0.75,
IF( ISPICKVAL( Duracion_de_licencia__c , &quot;1/10 día&quot;) , 0.1, 
IF( ISPICKVAL( Duracion_de_licencia__c , &quot;1/20 día&quot;) , 0.05, 	0))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Día decimal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>