force-app/main/default/objects/Licencia__c/fields/Duracion_de_licencia__c.field-meta.xml
<CustomField>
    <fullName>Duracion_de_licencia__c</fullName>
    <label>Duración de licencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 día</fullName>
            </value>
            <value>
                <fullName>3/4 día</fullName>
            </value>
            <value>
                <fullName>1/2 día</fullName>
            </value>
            <value>
                <fullName>1/4 día</fullName>
            </value>
            <value>
                <fullName>1/5 día</fullName>
            </value>
            <value>
                <fullName>1/10 día</fullName>
            </value>
            <value>
                <fullName>1/20 día</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>