force-app/main/default/objects/Licencia__c/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Participación en congresos</fullName>
            </value>
            <value>
                <fullName>Giras</fullName>
            </value>
            <value>
                <fullName>Convención de ventas</fullName>
            </value>
            <value>
                <fullName>Reuniones de equipo</fullName>
                <label>Reuniones en compañia</label>
            </value>
            <value>
                <fullName>Licencias varias</fullName>
            </value>
            <value>
                <fullName>Capacitaciones</fullName>
            </value>
            <value>
                <fullName>Reunión con Jefe</fullName>
            </value>
            <value>
                <fullName>Reunión SN</fullName>
            </value>
            <value>
                <fullName>Reuniones externas</fullName>
            </value>
            <value>
                <fullName>Reunión De Equipo</fullName>
            </value>
            <value>
                <fullName>Reunión Kae/Kam</fullName>
            </value>
            <value>
                <fullName>Traslado Por Gira</fullName>
            </value>
            <value>
                <fullName>Capacitaciones Equipo Promocional (Ta/Externo)</fullName>
            </value>
            <value>
                <fullName>Participación De Workshop Para La Ta De Stroke</fullName>
            </value>
            <value>
                <fullName>Participación De Workshop Para La Ta De Uti</fullName>
            </value>
            <value>
                <fullName>Participación De Workshop Para La Ta De Metabólicos</fullName>
            </value>
            <value>
                <fullName>Participación De Workshop Para Dieta Cetogenica</fullName>
            </value>
            <value>
                <fullName>Eventos</fullName>
            </value>
            <value>
                <fullName>Congresos</fullName>
            </value>
            <value>
                <fullName>Lanzamientos</fullName>
            </value>
            <value>
                <fullName>Reunión Con Hcp´S</fullName>
            </value>
            <value>
                <fullName>Reunión Con Auditores</fullName>
            </value>
            <value>
                <fullName>Averiguación Licitaciones</fullName>
            </value>
            <value>
                <fullName>Reunión De Ciclo</fullName>
            </value>
            <value>
                <fullName>Towhall</fullName>
            </value>
            <value>
                <fullName>Convención</fullName>
            </value>
            <value>
                <fullName>Capacitaciones Hr</fullName>
            </value>
            <value>
                <fullName>Semana adicional de vacaciones</fullName>
                <label>Vacaciones</label>
            </value>
            <value>
                <fullName>Compensatorios</fullName>
                <label>Compensatorio</label>
            </value>
            <value>
                <fullName>Enfermedad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>