force-app/main/default/objects/Licencia__c/validationRules/duracion_solo_si_es_mismo_dia.validationRule-meta.xml
<ValidationRule>
    <fullName>duracion_solo_si_es_mismo_dia</fullName>
    <active>true</active>
    <description>Solo se podrá seleccionar un valor en el campo &quot;Duración de licencia&quot; si esta comienza y termina el mismo día (un solo día de licencia).</description>
    <errorConditionFormula>AND(NOT(ISBLANK(TEXT(Duracion_de_licencia__c))), Fecha_de_inicio__c !=  Fecha_de_fin__c )</errorConditionFormula>
    <errorDisplayField>Duracion_de_licencia__c</errorDisplayField>
    <errorMessage>Solo puede seleccionar un valor en este campo si la licencia es para un solo día, es decir, que la fecha de inicio y fecha de fin sean la misma.</errorMessage>
</ValidationRule>