force-app/main/default/objects/Licencia__c/validationRules/Licencia_mayor_a_7_dias.validationRule-meta.xml
<ValidationRule>
    <fullName>Licencia_mayor_a_7_dias</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),Fecha_de_inicio__c &lt; TODAY() - 7)</errorConditionFormula>
    <errorDisplayField>Fecha_de_inicio__c</errorDisplayField>
    <errorMessage>No se permite cargar una licencia con una antigüedad mayor a 7 días.</errorMessage>
</ValidationRule>