force-app/main/default/objects/Licencia__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ciclo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>