force-app/main/default/objects/Licencia__c/listViews/Por_aprobar.listView-meta.xml
<ListView>
    <fullName>Por_aprobar</fullName>
    <columns>NAME</columns>
    <columns>Ciclo__c</columns>
    <columns>Fecha_de_inicio__c</columns>
    <columns>Fecha_de_fin__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Aprobado__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Por aprobar</label>
    <sharedTo>
        <group>KAE_Adultos</group>
        <group>KAE_Pediatrico</group>
        <group>Stakeholders</group>
    </sharedTo>
</ListView>